--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -13,3 +13,6 @@ $logo-secondary: darken($logo-primary, 20%);
 
 
 $speed: 600ms ease;
+
+@import url(https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap);
+$josefin-sans: 'Josefin Sans', sans-serif;
