--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -4,7 +4,15 @@ footer {
     display: flex;
     justify-content: flex-end;
     font-size: 1.6rem;
+
     color: $white;
+    a {
+        text-decoration: none;
+        color: $white;
+        &:hover {
+            color: lighten($color: $white, $amount: 50)
+        }
+    }
     @include phone-view(){
         justify-content: space-around;
         padding-bottom: 10rem;
