added and styled search bar for projects page

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,7 @@
 @import "reset";
 @import "App";
 @import "projects";
+@import "projectsearch";
 @import "main";
 @import "contact";
 @import "skills";
