--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -11,6 +11,7 @@ $icon-secondary: lighten($icon-primary, 20%);
 $logo-primary: #bd3b2a;
 $red: #b32;
 $logo-secondary: darken($logo-primary, 20%);
+$search-bg: #3d4653;
 
 
 $speed: 600ms ease;
