--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 .main {
     font-size: 1.8rem;
     margin-top: 0;
-
+    margin-left: 8rem;
 
     display: flex;
     justify-content: space-around;
@@ -10,7 +10,7 @@
 
     @include phone-view() {
    
-        
+        margin: 0;
     }
     .logo-header{
         margin: 0 auto;
@@ -20,7 +20,7 @@
     .splash-border{
         border: 1rem solid transparent;
         margin-top: 2rem;
-        margin-left: 8rem;
+
         width: 80%;
         border-image: url(../svg/border-light.svg) 5% stretch;
         box-shadow: 7px 10px 23px -6px rgba(0,0,0,0.75);
@@ -31,16 +31,12 @@
     }
     .splash {
         display: grid;
-
-
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 2fr;
         align-items: center;
         background-color: #abc;
         font-family: $josefin-sans;
-
-
-        padding: 5rem;
+        padding: 4rem;
 
 
 
