edited contact page style

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,6 +2,7 @@
 $bg-color: #282c34;
 $white: #b4b4c9;
 $black: #123;
+$blue: #abc;
 $text-primary: #b2c2e2;
 $text-secondary: #ddd;
 $bg-primary: #23232e;
