--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -2,18 +2,22 @@
 
     h1{
         font-size: 3rem;
-        margin: 0 0 2rem;
+        margin: 0 0 2rem 1rem;
     }
     height: 100%;
+    width: 80vw;
     padding: 1rem;
     display: flex;
     flex-direction: column;
+    @include phone-view() {
+        width: 90vw;
+    }
     img {
         width: 4rem;
     }
     .error {
         color: $red;
-        padding: 1.2rem 0 1.2rem 0;
+        padding: 1.2rem 0 1.2rem 1rem;
     }
     label {
         font-size: 2.5rem;
@@ -21,7 +25,7 @@
 
     }
     .social {
-        background-color: #abc;
+        background-color: $blue;
         color: $black;
         ul{
         display: flex;
@@ -72,4 +76,26 @@
         border-radius: .25rem;
         transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     }
-
+   .contact-button{
+    background-color: $blue;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin: 2rem 2rem 0 0;
+        button {
+            padding: clamp(1rem, 2vw, 2rem);
+            font-size: clamp(1.6rem, 3vw, 3rem);
+            background-color: $bg-color;
+            color: $white;
+            &:hover {
+                background-color: lighten($color: $bg-color, $amount: 10);
+                color: lighten($color: $white, $amount: 3)
+            }
+            &:disabled {
+                background-color: lighten($color: $bg-color, $amount: 60);
+                color: lighten($color: $white, $amount: 10)
+            }
+        }
+    
+        
+    }
