--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -2,6 +2,7 @@
 .project-card {
     margin: 1rem;
     border: .8rem solid transparent;
+
     border-image: url(../svg/project-border-bg.svg) 5% stretch;
 
 
@@ -24,10 +25,10 @@
 }
 .project-item {
 
-    background-color: #abc;
+    background-color: $blue;
     display: flex;
     align-items: stretch;
-    flex-direction: row;
+    flex-direction: column;
     padding: .5rem;
     @include phone-view(){
         flex-direction: column;
@@ -40,12 +41,7 @@
         color: $black;
     }
 }
-.header {
 
-    margin: 1rem 0 0 3rem;
-    font-size: 5rem;
-    color: $white;
-}
 .project-img {
     background-color: #abc;
     padding: 2rem;
