--- a/src/scss/projectsearch.scss
+++ b/src/scss/projectsearch.scss
@@ -1,12 +1,10 @@
 
 .searchBox {
     position: absolute;
-    top: 4%;
-    right: 10%;
-    transform:  translate(0%,0%);
+    top: 3rem;
+    right: 10vw;
     background: $search-bg;
     height: 4rem;
-
     border-radius: 45px;
 
 }
@@ -55,4 +53,10 @@
     width: 150px;
     padding: 0 6px;
 }
+}
+.project-search {
+    
+    display: flex;
+    flex-direction: column;
+ 
 }
