--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -43,7 +43,7 @@
 }
 
 .project-img {
-    background-color: #abc;
+    background-color: $blue;
     padding: 2rem;
     margin: 1rem;
     min-width: 8rem;
