--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -16,7 +16,7 @@
     padding: 1.6rem;
     font-size: 2rem;
     line-height: 1.8; 
-    background-color: #abc;
+    background-color: $blue;
     color: $black;
     a {
         text-decoration: none;
