--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -53,10 +53,10 @@
     font-size: 2rem;
     font-weight: 400;
     line-height: 2;
-    color: #495057;
-    background-color: #eee;
+    color: $contact-color;
+    background-color: $text-secondary;
     background-clip: padding-box;
-    border: 1px solid #ced4da;
+    border: 1px solid $contact-border;
     border-radius: .25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
@@ -69,10 +69,10 @@
         font-size: 2rem;
         font-weight: 400;
         line-height: 2;
-        color: #495057;
-        background-color: #eee;
+        color: $contact-color;
+        background-color: $text-secondary;
         background-clip: padding-box;
-        border: 1px solid #ced4da;
+        border: 1px solid $contact-border;
         border-radius: .25rem;
         transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     }
@@ -81,12 +81,13 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    margin: 2rem 2rem 0 0;
+    margin: 2rem 6vw 0 0;
         button {
             padding: clamp(1rem, 2vw, 2rem);
             font-size: clamp(1.6rem, 3vw, 3rem);
             background-color: $bg-color;
             color: $white;
+            border-radius: .3rem;
             &:hover {
                 background-color: lighten($color: $bg-color, $amount: 10);
                 color: lighten($color: $white, $amount: 3)
