--- a/src/scss/skills.scss
+++ b/src/scss/skills.scss
@@ -76,7 +76,7 @@
 
         color: $black;
         height: 100%;
-        background-color: #abc;
+        background-color: $blue;
         h2{
             padding: 2rem 0 0 2rem;
         }
