--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -13,6 +13,8 @@ $logo-primary: #bd3b2a;
 $red: #b32;
 $logo-secondary: darken($logo-primary, 20%);
 $search-bg: #3d4653;
+$contact-color: #495057;
+$contact-border: #ced4da;
 
 
 $speed: 600ms ease;
