styled contact page and projects page

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -27,6 +27,7 @@
     .social {
         background-color: $blue;
         color: $black;
+        font-family: $lato;
         ul{
         display: flex;
         flex-direction: row;
