--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@
 @import 'Navbar';
 @import "projects";
 @import "projectsearch";
+@import 'social';
 @import "main";
 @import "contact";
 @import "skills";
