--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -3,17 +3,17 @@
   height: 100vh;
   width: 100vw;
   z-index: 8;
-  background-image: radial-gradient(closest-side at 5%, $bg-dark, transparent 75%), linear-gradient(90deg, $background, transparent);
+  background-image: radial-gradient(circle at 0%, $bg-dark, transparent 75%), linear-gradient(90deg, $background, transparent);
   opacity: 0.8;
   &.on {
 
     transform: translate(0, 0);
-    transition: transform 0.5s ease-out;
+    transition: transform 0.2s ease-out;
   }
   &.off {
 
     transform: translate(calc(-200vw - 6px), 0);
-    transition:  transform 0.5s ease-in;
+    transition:  transform 0.2s ease-in;
   }
 }
 
