--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -6,10 +6,10 @@
     left: 0;
     padding: 0.5rem;
     color: $white;
-    font-family: $sans;
+    font-family: $nav-sans;
     background-color: $footer;
     height: 1.5rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
     z-index: 12;
     text-align: right;
     padding-right: 1rem;
