--- a/src/scss/splash.scss
+++ b/src/scss/splash.scss
@@ -2,12 +2,12 @@
   margin: 1rem;
   font-size: calc(15px + 2vmin);
   position: relative;
-  border: 1rem solid transparent;
-  border-image: url(../svg/border-dark.svg) 10% stretch;
+  border: .8rem solid transparent;
+  border-image: url(../svg/border-dark.svg) 8% stretch;
   width: calc(100vw - 16rem);
   min-width: 80vw;
   min-height: 30vh;
-  max-height: calc(100vh - 16rem);
+  max-height: calc(100vh - 15rem);
   z-index: 1;
   top: calc(10vh + 100px);
   display: flex;
@@ -22,12 +22,17 @@
     background-color: $background;
     .splash-header {
       color: $white;
-      font-size: calc(20px + 2vmin);
-      font-family: $fancy-sans;
-      padding-right: 8vw;
+      margin-top: 1rem;
+      font-size: calc(20px + 4vmin);
+      font-family: $sans;
+      font-weight: bold;
+      padding-right: 15vw;
       text-decoration: underline;
       text-align: right;
       user-select: none;
+      @include nav-break {
+        padding-right: 5rem;
+      }
     }
     .splash-border {
       min-height: 20vh;
@@ -40,9 +45,9 @@
         color: $black;
         display: grid;
         font-family: $sans;
-
+        font-weight: bold;
         background-color: $bg-light;
-
+        font-size: calc(1rem + 4vw);
         max-height: calc(100vh - 22rem);
 
         align-self: start;
@@ -56,6 +61,7 @@
           "img"
           "desciption"
           "bullet";
+
         @include phone-view {
           grid-template-areas:
             "title title title title"
@@ -71,7 +77,7 @@
 
         /* Track */
         &::-webkit-scrollbar-track {
-          background: $background;
+          background: $bg-light;
         }
 
         /* Handle */
