--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -41,6 +41,6 @@ $speed: 600ms ease;
 //$sans: 'Patrick Hand', cursive;
 
 
-$fancy-sans: 'Lato', sans-serif;
+$fancy-sans: 'Open Sans', sans-serif;
 $sans: 'SchoolYard', sans-serif;
 $nav-sans: 'SchoolYard', Fallback, sans-serif;
