--- a/src/scss/splash.scss
+++ b/src/scss/splash.scss
@@ -1,6 +1,6 @@
 .splash-wrap {
   margin: 1rem;
-  font-size: calc(15px + 2vmin);
+
   position: relative;
   border: .8rem solid transparent;
   border-image: url(../svg/border-dark.svg) 8% stretch;
@@ -64,9 +64,9 @@
 
         @include phone-view {
           grid-template-areas:
-            "title title title title"
-            "img bullet bullet bullet"
-            "desciption desciption desciption desciption";
+            "title title"
+            "img  bullet"
+            "desciption desciption";
         }
         overflow-y: scroll;
         overflow-x: hidden;
@@ -97,16 +97,13 @@
           display: flex;
           justify-content: space-between;
           grid-area: title;
-          font-family: $fancy-sans;
+          font-family: $sans;
           margin: 0.5rem;
           svg {
             width: calc(14px + 2vmin);
             padding-right: 1vw;
           }
-          h1 {
-            text-align: left;
-            font-size: calc(13px + 2vmin);
-          }
+
         }
         .splash-img {
           grid-area: img;
@@ -127,11 +124,11 @@
           text-align: left;
           margin: 1rem;
 
-          font-size: calc(16px + 1vmin);
+          font-size: calc(10px + 3vmin);
         }
         .splash-bullet {
           grid-area: bullet;
-          font-size: calc(13px + 1vmin);
+          font-size: calc(13px + 2vmin);
           text-align: left;
           width: 50vw;
           margin: 1rem 1em 1rem 2rem;
@@ -140,7 +137,7 @@
           }
 
           li {
-            margin: 0.5rem;
+            margin-left: 0.5rem;
             list-style-type: square;
           }
         }
