--- a/src/scss/success.scss
+++ b/src/scss/success.scss
@@ -4,7 +4,10 @@
     text-align: center;
     top: 10vh;
     left: 3vw;
-    background-color: $background;
+    background-color: $bg-dark;
+    font-family: $sans;
+    font-size: calc(10px + 4vw);
+    padding-bottom: 1vh;
     color: $white;
     border-radius: 18px;
     padding: 2rem;
@@ -13,7 +16,7 @@
         margin-bottom: 2rem;
     }
     button {
-        background-color: $background;
+        background-color: $bg-dark;
         color: $white;
         height: 3rem;
         font-size: 2rem;
@@ -21,7 +24,7 @@
         border-radius: 10px;
         &:hover {
             color: $contrast;
-            background-color: $link;
+            background-color: $background;
         }
     }
 }
