proof read about page

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -43,4 +43,4 @@ $speed: 600ms ease;
 
 $fancy-sans: 'Open Sans', sans-serif;
 $sans: 'SchoolYard', sans-serif;
-$nav-sans: 'SchoolYard', Fallback, sans-serif;
+$nav-sans: 'SchoolYard', sans-serif;
